# hu-eval

./: .gitignore  README.md  requirements.txt  run_test.py  setup.cfg
hueval/: dataclasses.py  prepare.py  training.py
hueval/datasets/: __init__.py  hulu.py  nerkor.py  nerkor_extended.py  opinhubank.py
hueval/models/: bert.py  hubert.py
hueval/tokenizers/: hubert.py
hueval/tokenizers/utils/: align_labels_for_token_classification.py  hulu_tokenizer.py
hueval/transformers/: __init__.py  multiple_choice_qa.py  sequence_classification.py  span_classification.py  token_classification.py
hueval/utils/: data_collator.py  network.py
wandb/run-20221102_151344-2b9ig1eu/: run-2b9ig1eu.wandb
wandb/run-20221102_151344-2b9ig1eu/files/: config.yaml  wandb-metadata.json
wandb/run-20221102_151548-upp48nh3/: run-upp48nh3.wandb
wandb/run-20221102_151548-upp48nh3/files/: config.yaml  requirements.txt  wandb-metadata.json
