[metadata]
name = hueval
version = 0.7.1
author = Tamás Ficsor
author_email = ficsort@inf.u-szeged.hu
description = Hungarian Evaluation library for NLP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ficstamas/hu-eval
project_urls =
    Bug Tracker = https://github.com/ficstamas/hu-eval/issues
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9
install_requires =
    beautifulsoup4>=4.10.0
    datasets>=2.6.1
    numpy
    pandas
    requests
    scikit-learn
    scipy
    tqdm
    transformers>=4.20.0
    seqeval>=1.2.0
    tensorflow>=2.10.0
    wandb>=0.13.4
    evaluate
